[package]
name = "clogfmt"
version = "0.1.0"
authors = ["Marc Brinkmann <marc@casperlabs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
structopt = "0.3.20"
